Change package name.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "wunderio/ecs-drupal",
+    "name": "hkirsman/ecs-drupal",
     "description": "Finder for ECS.",
     "type": "library",
     "require": {
